[Java] Add tests for double dashed options from vm
IDEA-359245

GitOrigin-RevId: 8ac98351bd51281d9f4c60e55afe9861589e3205